secgrp.tf
resource "aws_security_group" "vprofile-bean-elb-sg" {
    name="vprofile-bean-elb-sg"
    description="Security group for bean-elb"
    vpc_id= module.vpc.vpc_id
    egress {
        from_port = 0
        protocol = "-1"
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        protocol = "tcp"
        to_port = 80
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "vprofile-bastion-sg" {
  name = "vprofile-bastion-sg"
  description = "Security group for bastionisioner ec2 instance"
  vpc_id = module.vpc.vpc_id
      egress {
        from_port = 0
        protocol = "-1"
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        protocol = "tcp"
        to_port = 22
        cidr_blocks = [var.MYIP]
    }
}

resource "aws_security_group" "vprofile-prod-sg" {
  name = "vprofile-prod-sg"
  description = "Security group for beanstalk ec2 instances"
  vpc_id = module.vpc.vpc_id
      egress {
        from_port = 0
        protocol = "-1"
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress { # should be accessible only from bastion host
        from_port = 22
        protocol = "tcp"
        to_port = 22
        security_groups = [aws_security_group.vprofile-bastion-sg.id]
    }
}
resource "aws_security_group" "vprofile-backend-sg" {
  name = "vprofile-backend-sg"
  description = "Security group for RDS, active mq, elastic cache"
  vpc_id = module.vpc.vpc_id
      egress {
        from_port = 0
        protocol = "-1"
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress { # should be accessible only from beanstalk instances and from itself, we will create rule later
        from_port = 0
        protocol = "-1"
        to_port = 0
        security_groups = [aws_security_group.vprofile-prod-sg.id]
    }
}
# we want to create rule for allowing the security group inner communications, we need first to create the SG and then add a rule. like in console
resource "aws_security_group_rule" "sec_group_allow_itself" {
    type = "ingress"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    security_group_id = aws_security_group.vprofile-backend-sg.id
    source_security_group_id = aws_security_group.vprofile-backend-sg.id
}
